--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   },
   "dependencies": {
     "acorn": "^5.3.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-plumber-notifier": "0.0.3",
     "instafeed": "^2.0.0",
     "jstransformer-markdown-it": "^2.0.0"
   }
