--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "acorn": "^5.3.0",
+    "gulp-data": "^1.3.1",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-plumber-notifier": "0.0.3",
